DATE        AUTHOR      CHANGE
----------- ----------- -------------------------------------------------------
Dec-18-2006 aronb       Added initial support for Direct3D.
                        NEW VERSION: 2.1.16
Nov-14-2006 patrick     Replaced vpr::ReturnStatus usage with bool in the
                        vrj::PerfPlugin interface.
                        NEW VERSION: 2.1.15
Oct-30-2006 patrick     Register signal handlers for SIGINT, SIGTERM, and (on
                        Windows only) SIGBREAK when the kernel is started.
                        NEW VERSION: 2.1.14
Oct-01-2006 patrick     Updated for VPR 1.1.35.
                        NEW VERSION: 2.1.13
Oct-01-2006 patrick     Updated to handle the vpr::Thread constructor throwing
                        an exception.
                        NEW VERSION: 2.1.12
Sep-07-2006 patrick     Improved error handling in viewport configurations.
Jul-12-2006 patrick     Changed the DLL name to include the version as part of
                        the base library name on Windows. Implemented automatic
                        linking of the VR Juggler libraries.
                        NEW VERSION: 2.1.11
Jun-26-2006 patrick     Added support for building universal binaries on Mac
                        OS X.
                        NEW VERSION: 2.1.10
Jun-19-2006 patrick     Refactored vrj::OsgApp so that the scene view is
                        updated only once per frame. Subclasses overriding
                        vrj::OsgApp::latePreFrame() must be sure to call up to
                        the base class implementation as the last step in the
                        override.
                        NEW VERSION: 2.1.9
May-24-2006 dshipton    Versioning of installables for multiple installations.
                        NEW VERSION: 2.1.8
Feb-15-2006 patrickh    Updated to VPR 1.1.16.
                        NEW VERSION: 2.1.7
Jan-08-2006 allenb      Added swapSync test application.