@@ -180,6 +180,9 @@
 			<File
 				RelativePath="..\..\modules\vrjuggler\vrj\Display\Viewport.cpp">
 			</File>
+			<File
+				RelativePath="..\..\modules\vrjuggler\vrj\vrjmain.cpp">
+			</File>
 		</Filter>
 		<Filter
 			Name="Header Files"
